MAJOR Clean up of code in JNC library, using Eclipse formatter